[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-uaslog"
version = "0.1.1"
description = "Counter-UAS telemetry/log analyzer that flags drone-detection events, RF bands, and track anomalies."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "defense", "uaslog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/uaslog"

[project.scripts]
"uaslog-emit" = "uaslog.connect:emit_main"
uaslog = "uaslog.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["uaslog"]
